@@ -15,6 +15,7 @@ Changelog for 1.3.8:
 * Fixed company fax being printed under shipto (Herman V)
 * Fixed "File does not exist... [object HTMLButtonElement]" js error (Herman V)
 * Fixed timecard template headers not showing company name, etc (Chris T)
+* Fixed part account mappings broken after upgrade from 1.2 (Chris T)
 
 Changelog for LedgerSMB 1.3.7 (Categorized due to length)
 Database
